Modified tests classes so that they are adjusted to the new changes I made in the classes that are getting tested